Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 16.0.0-beta1
-
None
-
da38404d7 (qds/dev)
Description
The dependency to Qt::WebSockets of devicesharing leaks into the rest of QmlDesigner because of various includes and runmanager.
Attachments
For Gerrit Dashboard: QTCREATORBUG-32296 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
615563,8 | DeviceManager: Break the websocket dependencies | qds/dev | qt-creator/qt-creator | Status: MERGED | +2 | +1 |