DeviceManager: Break the websocket dependencies

Task-number: QTCREATORBUG-32296
Change-Id: Ic9c80e3507a7dc8e666d740e0db72d2a5be12042
Reviewed-by: Eike Ziller <eike.ziller@qt.io>